# multi-survey-agent

./: .gitignore  README.md  make_survey_call.py  multi_survey_calling_agent.py  pyproject.toml  schema.py  survey_data.csv  utils.py
prompts/: survey_prompt.yaml
questions/: survey_questions.yaml
